Bug 18558 - Misplaced annotations in files with a cropbox set
Summary: Misplaced annotations in files with a cropbox set
Status: RESOLVED FIXED
Alias: None
Product: poppler
Classification: Unclassified
Component: qt4 frontend (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: poppler-bugs
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-11-16 15:50 UTC by Jonathan Verner
Modified: 2009-01-08 02:53 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
A pdf file, with annotations which are displayed misplaced by poppler. (146.56 KB, application/pdf)
2008-11-16 15:50 UTC, Jonathan Verner
Details

Description Jonathan Verner 2008-11-16 15:50:20 UTC
Created attachment 20348 [details]
A pdf file, with annotations which are displayed misplaced by poppler.

Poppler seems to interpret the coordinates of annotations
in the coordinate system originating at the bottom-left corner
of the crop-box whereas acrobat (and, it seems, the pdf spec)
interprets them as originating at (0,0) of the user space, i.e. 
the "real" (0,0). This results in the fact, that in files with a cropbox set, the annotations appear misplaced (viewed in okular, using the latest
git checkout a6f5032ab0d6edbf3879f39efff7916b1f7233da of libpoppler) when compared to the same file viewed in acrobat reader. For an example, see the attached pdf file.
Comment 1 Pino Toscano 2009-01-08 02:53:21 UTC
Thanks for the report and the testcase!

Fixed for the next stable Poppler release, 0.10.3.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.