Fix positioning problems (hopefully, ticket #1). The problem seemed to be that poppler aparently reported its coordinates in a coordinate system with the origin at the bottom-left corner of the crop-box instead of the real (0,0). This meant that annotations in a file with a crop-box would appear misplaced in acrobat reader. The bug has been reported to libpoppler, see https://bugs.freedesktop.org/show_bug.cgi?id=18558.